# recipe-chatbot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: instrumentation.py  retrieval.py  utils.py
backend/homeworks/: lesson_2.py
homeworks/hw2/: parse_traces.py  run.py
homeworks/hw3/: README.md
homeworks/hw3/data/: export_stats.json  kf_dev_set.csv  kf_test_set.csv  kf_train_set.csv  query_result_2025-06-13T12_40_03.47512Z.csv
homeworks/hw3/data/llm_eval_runs/: llm_as_judge_eval_run_2025-06-15-17-16-35.csv  llm_as_judge_eval_run_2025-06-15-17-56-49.csv  llm_as_judge_eval_run_2025-06-15-18-27-16.csv
homeworks/hw3/results/: kf_eval_output.md
homeworks/hw3/results/llm_eval_runs/: hamel_test_set_llm_as_judge_eval_run_2025-06-16-11-49-11.csv  llm_as_judge_eval_run_2025-06-15-16-16-16.csv  llm_as_judge_eval_run_2025-06-15-16-36-36.csv  llm_as_judge_eval_run_2025-06-15-16-44-32.csv  llm_as_judge_eval_run_2025-06-15-16-55-17.csv  llm_as_judge_eval_run_2025-06-15-17-30-54.csv  llm_as_judge_eval_run_2025-06-15-17-40-42.csv  (+4 more)
homeworks/hw3/scripts/: README.md  env.example  kappa_agreement.py  kf_develop-llm-as-judge-prompt.md  kf_develop_judge.py  kf_evaluate_judge.py  kf_improve_llm_as_judge.md  label_traces.py  run_evaluate_llm_judge.sh  run_llm_judge.sh
homeworks/hw4/: kf_run.sh
homeworks/hw4/data/: knowledge_intensive_queries.json  synthetic_queries.json
homeworks/hw4/results/: kf_retrieval_results_baseline.json
homeworks/hw4/scripts/: kf_evaluate_retrieval.py  kf_generate_synthetic_queries.py
